Bug 416405 - [PulseAudio] kmix controls won't respond to mouse wheel scroll
Summary: [PulseAudio] kmix controls won't respond to mouse wheel scroll
Status: RESOLVED FIXED
Alias: None
Product: kmix
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Christian Esken
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-01-18 02:41 UTC by fabio
Modified: 2021-02-11 14:53 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description fabio 2020-01-18 02:41:34 UTC
SUMMARY
Volume controls will not respond to mouse wheel. 

STEPS TO REPRODUCE
1. click on kmix
2. try to change the volume with the mouse wheel scroll
3. 

OBSERVED RESULT
a sound efect is played but volume levels won't change

EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 pyls 2020-02-21 15:49:51 UTC
(In reply to fabio from comment #0)
> SUMMARY
> Volume controls will not respond to mouse wheel. 
> 
> STEPS TO REPRODUCE
> 1. click on kmix
> 2. try to change the volume with the mouse wheel scroll
> 3. 
> 
> OBSERVED RESULT
> a sound efect is played but volume levels won't change
> 
> EXPECTED RESULT
> 
> 
> SOFTWARE/OS VERSIONS
> Windows: 
> macOS: 
> Linux/KDE Plasma: 
> (available in About System)
> KDE Plasma Version: 
> KDE Frameworks Version: 
> Qt Version: 
> 
> ADDITIONAL INFORMATION

I have the exact samme issue can provide versions:
Operating System: EndeavourOS (same as running arch on their normal repos)
KDE Plasma Version: 5.18.1
KDE Frameworks Version: 5.67.0
Qt Version: 5.14.1
Kernel Version: 5.4.20-1-lts
OS Type: 64-bit
Processors: 8 × Intel® Core™ i5-8365U CPU @ 1.60GHz
Memory: 15.0 GiB of RAM

Tested with both toutchpad and normal usb mouse.
The animation does not show, there is a beep sound but volume stays the same.
Works if you use leftclick and drag.
Comment 2 Jonathan Marten 2021-02-09 19:09:07 UTC
Works for me here, both with and without PulseAudio.

Are you able to provide a screenshot of the system tray volume popup?
(because it is a popup you may need to use the "after a delay" option of Spectacle).
Comment 3 Jonathan Marten 2021-02-11 14:49:26 UTC
Can be reproduced with PulseAudio.
Comment 4 Jonathan Marten 2021-02-11 14:53:22 UTC
Git commit 0ddf16d7a86ceba3e6c0b7b9d7b064f4c507ef95 by Jonathan Marten.
Committed on 11/02/2021 at 14:46.
Pushed by marten into branch 'master'.

MDWSlider: Always set the single step value

Some controls, in particular PulseAudio, have a significant range
which means that a single step of 1 does not appear to move the slider
when an arrow key or the mouse wheel is used (although it actually does,
just very slowly).  Set the single step to give 100 steps.

M  +2    -0    backends/mixer_pulse.h
M  +29   -10   gui/mdwslider.cpp

https://invent.kde.org/multimedia/kmix/commit/0ddf16d7a86ceba3e6c0b7b9d7b064f4c507ef95