MDWSlider: Always set the single step value

Some controls, in particular PulseAudio, have a significant range
which means that a single step of 1 does not appear to move the slider
when an arrow key or the mouse wheel is used (although it actually does,
just very slowly).  Set the single step to give 100 steps.

BUG:416405